working with editorjs to implement blog editor, done creating block tool

--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -1,5 +1,7 @@
 <% include ../partials/head %>
 
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
+
 <div class="container container-single"> 
     <div class="single-wrapper col-8 offset-2">
         <h1 class="single-title">Rédiger un post de blog</h1>
@@ -17,6 +19,11 @@
                 <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
             </div>
 
+            <div id="editorjs" style="background-color: white;"></div>
+
+            <button id="save-button">Save</button>
+            <pre id="output"></pre>
+
             <div class="form-group text-center">
                 <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
                 <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple>
@@ -25,6 +32,8 @@
             <input type="submit" class="logbtn" value="Valider" id="submit-blog">
         </form>
     </div>
+
+<script src="/scripts/blog/blogEditor.js"></script>
 <script src="/scripts/frontValidation.js"></script>
 </div>
   
