--- a/public/editor.css
+++ b/public/editor.css
@@ -34,3 +34,8 @@
 .simple-image.stretched img {
     width: 100%!important;
 }
+
+.cdx-marker {
+    background: rgba(245,235,111,0.29);
+    padding: 3px 0;
+}
