--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -28,7 +28,11 @@
     ></script>
     <!-- CUSTOM -->
     <link rel="stylesheet" href="/style.css" />
-    <link rel="stylesheet" href="/editor.css" />
+
+    <!-- Quill RTE -->
+    <link href="https://cdn.quilljs.com/1.3.4/quill.snow.css" rel="stylesheet"> 
+    <script src="https://cdn.quilljs.com/1.3.4/quill.js"></script>
+
     <script src="/scripts/tools.js"></script>
     <script src="/scripts/alert.js"></script>
   </head>
