--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -1,7 +1,5 @@
 <% include ../partials/head %>
 
-<script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
-
 <div class="container container-single"> 
     <div class="single-wrapper col-8 offset-2">
         <h1 class="single-title">Rédiger un post de blog</h1>
@@ -13,16 +11,14 @@
                 <span id="i_title" class="form-info">Title must contain between 4 and 256 characters</span>
             </div>
 
-            <div class="form-group">
+            <!--<div class="form-group">
                 <label class="control-label">Contenu</label>
                 <textarea id="content" class="instructions-textarea" name="content" placeholder="Le contenu de votre ticket de blog..." onkeyup="Validate.String(this, 128, 4096);" required><% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea>
                 <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
-            </div>
+            </div>-->
 
-            <div id="editorjs" style="background-color: white;"></div>
-
-            <button id="save-button">Save</button>
-            <pre id="output"></pre>
+            <div id="editor" style="background-color: white;"></div>
+            <input type="hidden" name="content" id="editorData">
 
             <div class="form-group text-center">
                 <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
@@ -32,9 +28,38 @@
             <input type="submit" class="logbtn" value="Valider" id="submit-blog">
         </form>
     </div>
-
-<script src="/scripts/blog/blogEditor.js"></script>
-<script src="/scripts/frontValidation.js"></script>
 </div>
+
+<script>
+    var toolbarOptions = [
+        ['bold', 'italic', 'underline', 'strike'],        // toggled buttons
+        ['blockquote', 'code-block'],
+        [{ 'list': 'ordered'}, { 'list': 'bullet' }],
+        [{ 'indent': '-1'}, { 'indent': '+1' }],          // outdent/indent
+        [{ 'size': ['small', false, 'large', 'huge'] }],  // custom dropdown
+        [{ 'header': [1, 2, 3, 4, 5, 6, false] }],
+        [{ 'color': [] }, { 'background': [] }],          // dropdown with defaults from theme
+        [{ 'font': [] }],
+        [{ 'align': [] }],
+        ['link', 'image'],
+        ['clean']                                         // remove formatting button
+    ];
+
+    var quill = new Quill('#editor', {
+        modules: {
+            toolbar: toolbarOptions,
+        },
+        placeholder: "Your blog article...",
+        theme: 'snow'
+    });
+    
+    const saveButton = document.getElementById('submit-blog');
+    const editorData = document.getElementById('editorData');
+
+    saveButton.addEventListener('click', (event) => {
+        editorData.value = quill.root.innerHTML;
+    })
+</script>
+<script src="/scripts/frontValidation.js"></script>
   
 <% include ../partials/footer %>
