--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -2,6 +2,20 @@
 
 <script src="/scripts/bootstrap-tagsinput.js"></script>
 
+
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/editorjs@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/list@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/paragraph@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/header@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/checklist@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/marker@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/warning@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/quote@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/delimiter@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/table@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/simple-image@latest"></script>
+<script src="https://cdn.jsdelivr.net/npm/@editorjs/table@latest"></script>
+
 <div class="container container-single">
     <% if(locals.blogs){ %>
       <div class="single-wrapper" id="<%= locals.blogs._id %>">
@@ -50,7 +64,8 @@
           <p class="blog-info pb-2">par 
             <b class="blog-author"><%= locals.blogs.author %></b>, <i class="blog-date"><%= locals.blogs.date %></i>
           </p>
-          <p class="blog-content col-10 offset-1 mt-2"><%= locals.blogs.content %></p>
+          
+          <div class="blog-content col-10 offset-1" id="content-holder"></div>
         </div>
       </div>
     <% } %>
@@ -61,6 +76,12 @@
     <img id="expandImg" src="/api/image/<%= locals.img[0]._id %>"> 
   </div>
 </a>
+
+<script>
+  let toAppend = "<%= locals.blogs.content %>";
+  toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">")
+  document.getElementById("content-holder").innerHTML = toAppend;
+</script>
 
 <script>
   $('#carousel-thumb').on('slide.bs.carousel', function (element) {
