--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -3,7 +3,7 @@
 <div class="container container-single"> 
     <div class="single-wrapper col-8 offset-2">
         <h1 class="single-title">Modifier un ticket de blog</h1>
-        <form class="col-8 offset-2" method="POST" action="/api/blog/patch/<%= locals.blogContent.id %>" enctype="multipart/form-data">
+        <form class="col-8 offset-2" id="blog" method="POST" action="/api/blog/patch/<%= locals.blogContent.id %>" enctype="multipart/form-data">
             <hr />
             <div class="form-group">
                 <label class="control-label">Titre</label>
@@ -11,14 +11,11 @@
                 <span id="i_title" class="form-info">Title must contain between 1 and 256 characters</span>
             </div>
 
-            <!--<div class="form-group">
-                <label class="control-label">Description</label>
-                <textarea class="instructions-textarea" id="content" name="content" placeholder="Description de l'oeuvre.." onkeyup="Validate.String(this, 128, 4096);" required><%= locals.blogContent.content %></textarea>
-                <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>  
-            </div>-->
-
-            <div id="editor" style="background-color: white;"></div>
-            <input type="hidden" name="content" id="editorData">
+            <div class="form-group">
+                <div id="editor" style="background-color: white;" onkeyup="saveContent()"></div>
+                <input type="hidden" name="content" id="content">
+                <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
+            </div>
 
             <div class="form-group">
                 <div class="form-group text-center">
@@ -68,15 +65,27 @@
 
     let toAppend = "<%= locals.blogContent.content %>";
     toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">");
-    const delta = quill.clipboard.convert(toAppend)
-    quill.setContents(delta, 'silent')
+    let delta = quill.clipboard.convert(toAppend);
+    quill.setContents(delta, 'silent');
+
+    <% if (locals.formData) { %>
+        toAppend = "<%= locals.formData.content %>";
+        toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">");
+        delta = quill.clipboard.convert(toAppend);
+        quill.setContents(delta, 'silent');
+    <% } %>
     
     const saveButton = document.getElementById('submit-blog');
-    const editorData = document.getElementById('editorData');
+    const editorData = document.getElementById('content');
 
     saveButton.addEventListener('click', (event) => {
         editorData.value = quill.root.innerHTML;
     })
+
+    function saveContent() {
+        editorData.value = quill.root.innerHTML;
+        Validate.String(editorData, 128, 4096);
+    }
 
 </script>
 <script src="/scripts/blog/blogScripts.js"></script>
