--- a/views/restricted/Blog-post.ejs
+++ b/views/restricted/Blog-post.ejs
@@ -11,14 +11,11 @@
                 <span id="i_title" class="form-info">Title must contain between 4 and 256 characters</span>
             </div>
 
-            <!--<div class="form-group">
-                <label class="control-label">Contenu</label>
-                <textarea id="content" class="instructions-textarea" name="content" placeholder="Le contenu de votre ticket de blog..." onkeyup="Validate.String(this, 128, 4096);" required><% if (locals.formData) { %><%= locals.formData.content %><% } %></textarea>
+            <div class="form-group">
+                <div id="editor" style="background-color: white;" onkeyup="saveContent()"></div>
+                <input type="hidden" name="content" id="content">
                 <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
-            </div>-->
-
-            <div id="editor" style="background-color: white;"></div>
-            <input type="hidden" name="content" id="editorData">
+            </div>
 
             <div class="form-group text-center">
                 <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
@@ -49,16 +46,28 @@
         modules: {
             toolbar: toolbarOptions,
         },
-        placeholder: "Your blog article...",
+        placeholder: "Le contenu de votre ticket de blog...",
         theme: 'snow'
     });
+
+    <% if (locals.formData) { %>
+        let toAppend = "<%= locals.formData.content %>";
+        toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">");
+        const delta = quill.clipboard.convert(toAppend);
+        quill.setContents(delta, 'silent');
+    <% } %>
     
     const saveButton = document.getElementById('submit-blog');
-    const editorData = document.getElementById('editorData');
+    const editorData = document.getElementById('content');
 
     saveButton.addEventListener('click', (event) => {
         editorData.value = quill.root.innerHTML;
     })
+
+    function saveContent() {
+        editorData.value = quill.root.innerHTML;
+        Validate.String(editorData, 128, 4096);
+    }
 </script>
 <script src="/scripts/frontValidation.js"></script>
   
