--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -11,31 +11,33 @@
               <a href="/Admin/Blog/Patch/<%= locals.blogs._id %>"><i class="fas fa-edit"></i></a>
             <% } %> 
           </h3>  
-          <div class="carousel-container mt-3">
-            <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
-                <div class="carousel-inner" role="listbox">
-                    <% if (locals.img) { %>
-                        <% locals.img.forEach(function (item, index) { %>
-                            <div class="carousel-item img-fluid <% if(index == 0) { %>active<% } %>">
-                                <a href="#expand"><img onclick="expand(this);" src="http://localhost:8089/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
-                                <div class="carousel-caption d-none d-md-block">
-                                </div>
-                            </div>
-                        <% }) %>
-                    <% } %>
-              </div>       
-                <!--Controls-->
-                <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
-                    <span><i class="fas fa-chevron-left fa-4x"></i></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
-                    <span><i class="fas fa-chevron-right fa-4x"></i></span>
-                    <span class="sr-only">Next</span>
-                </a>
-                <!--/.Controls-->
-            </div>
-        </div>
+          <% if (locals.img[0]) { %>
+            <div class="carousel-container mt-3">
+              <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
+                  <div class="carousel-inner" role="listbox">
+                      <% if (locals.img) { %>
+                          <% locals.img.forEach(function (item, index) { %>
+                              <div class="carousel-item img-fluid <% if(index == 0) { %>active<% } %>">
+                                  <a href="#expand"><img onclick="expand(this);" src="http://localhost:8089/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
+                                  <div class="carousel-caption d-none d-md-block">
+                                  </div>
+                              </div>
+                          <% }) %>
+                      <% } %>
+                </div>       
+                  <!--Controls-->
+                  <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
+                      <span><i class="fas fa-chevron-left fa-4x"></i></span>
+                      <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
+                      <span><i class="fas fa-chevron-right fa-4x"></i></span>
+                      <span class="sr-only">Next</span>
+                  </a>
+                  <!--/.Controls-->
+              </div>
+          </div>
+        <% } %>
         <div class="thumbnail-wrapper mt-3">
             <ol class="carousel-indicators no-thumb">
                 <% if (locals.img) { %>
@@ -57,11 +59,13 @@
     <% } %>
 </div>
   
+<% if (locals.img[0]) { %>
 <a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
     <img id="expandImg" src="/api/image/<%= locals.img[0]._id %>"> 
   </div>
 </a>
+<% } %>
 
 <script>
   let toAppend = "<%= locals.blogs.content %>";
