--- a/views/restricted/Blog-patch.ejs
+++ b/views/restricted/Blog-patch.ejs
@@ -3,7 +3,7 @@
 <div class="container container-single"> 
     <div class="single-wrapper col-8 offset-2">
         <h1 class="single-title">Modifier un ticket de blog</h1>
-        <form class="col-8 offset-2" id="blog" method="POST" action="/api/blog/patch/<%= locals.blogContent.id %>" enctype="multipart/form-data">
+        <form class="col-8 offset-2" id="blog" method="POST" action="/api/blog/patch/<%= locals.blogContent.id %>">
             <hr />
             <div class="form-group">
                 <label class="control-label">Titre</label>
@@ -15,22 +15,6 @@
                 <div id="editor" style="background-color: white;" onkeyup="saveContent()"></div>
                 <input type="hidden" name="content" id="content">
                 <span id="i_content" class="form-info">Content must contain between 128 and 4096 characters</span>
-            </div>
-
-            <div class="form-group">
-                <div class="form-group text-center">
-                    <label for="img" id="imglabel" class="filebtn">Choisir des images</label>
-                    <input class="inputfile" type="file" name="img" id="img" onchange="readURL(this)" multiple>
-                </div>
-                <% if (locals.img) { %>
-                    <% locals.img.forEach(function (item) { %>
-                        <img class="w-100 m-1" id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
-                        <div id="actDiv<%= item._id %>" class="action-div" <% if (item.isMain === true) { %>style="display:none"<% } %>>
-                            <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="http://localhost:8089/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
-                            <a id="sel<%= item._id %>" class="select-main" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Blog/<%= locals.blogContent.id %>/<%= item._id %>" <% if (item.isMain === true) { %>style="display:none"<% } %>><i class="fas fa-star"></i></a>
-                        </div>
-                    <% }) %>
-                <% } %>
             </div>
 
             <input type="submit" class="logbtn" value="Mettre à jour" id="submit-blog">
