--- a/views/single/Blog-single.ejs
+++ b/views/single/Blog-single.ejs
@@ -1,7 +1,5 @@
 <% include ../partials/head %>
 
-<script src="/scripts/bootstrap-tagsinput.js"></script>
-
 <div class="container container-single">
     <% if(locals.blogs){ %>
       <div class="single-wrapper" id="<%= locals.blogs._id %>">
@@ -11,44 +9,7 @@
               <a href="/Admin/Blog/Patch/<%= locals.blogs._id %>"><i class="fas fa-edit"></i></a>
             <% } %> 
           </h3>  
-          <% if (locals.img[0]) { %>
-            <div class="carousel-container mt-3">
-              <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
-                  <div class="carousel-inner" role="listbox">
-                      <% if (locals.img) { %>
-                          <% locals.img.forEach(function (item, index) { %>
-                              <div class="carousel-item img-fluid <% if(index == 0) { %>active<% } %>">
-                                  <a href="#expand"><img onclick="expand(this);" src="http://localhost:8089/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
-                                  <div class="carousel-caption d-none d-md-block">
-                                  </div>
-                              </div>
-                          <% }) %>
-                      <% } %>
-                </div>       
-                  <!--Controls-->
-                  <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
-                      <span><i class="fas fa-chevron-left fa-4x"></i></span>
-                      <span class="sr-only">Previous</span>
-                  </a>
-                  <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
-                      <span><i class="fas fa-chevron-right fa-4x"></i></span>
-                      <span class="sr-only">Next</span>
-                  </a>
-                  <!--/.Controls-->
-              </div>
-          </div>
-        <% } %>
-        <div class="thumbnail-wrapper mt-3">
-            <ol class="carousel-indicators no-thumb">
-                <% if (locals.img) { %>
-                    <% locals.img.forEach(function (item, index) { %>
-                        <li data-target="#carousel-thumb" data-slide-to="<%= index %>" <% if(index == 0) { %>class='active'<% } %>> 
-                          <img class="d-block w-100" src="/img/white_circle.png" alt="..." class="img-fluid">
-                        </li>
-                    <% }) %>
-                <% } %>
-            </ol>
-        </div>
+          
           <p class="blog-info pb-2">par 
             <b class="blog-author"><%= locals.blogs.author %></b>, <i class="blog-date"><%= locals.blogs.date %></i>
           </p>
@@ -59,18 +20,17 @@
     <% } %>
 </div>
   
-<% if (locals.img[0]) { %>
 <a class="lightbox-close" href="#close">
   <div class="lightbox-target" id="expand">
-    <img id="expandImg" src="/api/image/<%= locals.img[0]._id %>"> 
+    <img id="expandImg" src=""> 
   </div>
 </a>
-<% } %>
 
 <script>
   let toAppend = "<%= locals.blogs.content %>";
   toAppend = toAppend.replace(/(\r\n|\n|\r)/gm,"").replace(/&#34;/g, '"').replace(/&lt;/g, "<").replace(/&gt;/g, ">")
   document.getElementById("content-holder").innerHTML = toAppend;
+  //<a href="#expand"><img onclick="expand(this);" src="http://localhost:8089/api/image/" alt="1slide"></a>
 </script>
 
 <script>
@@ -80,5 +40,4 @@
   })
 </script>
 <script src="/scripts/blog/blogScripts.js"></script>
-<script src="/scripts/frontValidation.js"></script>
 <% include ../partials/footer %>
