handling free delivery for uniques, adapted Cart methods add/update/del

--- a/views/single/Order-recap.ejs
+++ b/views/single/Order-recap.ejs
@@ -17,7 +17,7 @@
       <% } %>
       </div>
       <hr />
-      <h2>delivery price (with tax:) <%= locals.order.deliveryPrice %>€</h2>
+      <h2>delivery price (with tax:) <%= locals.deliveryPriceFormatted %>€</h2>
       <div class="cart-row" id="cart-row-header">
         <span class="cart-item cart-header cart-column">ITEM</span>
         <span class="cart-quantity cart-header cart-column">QUANTITÉ</span>
