harmonizing user rights, changed level to role in User db, replaced verifySession with setUser and working on replacing outdated if (req.user)

--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -70,7 +70,7 @@
                 >Boutique</a
               >
             </li>
-            <% if (!locals.name) { %>
+            <% if (!locals.user) { %>
             <li>
               <a
                 href="/Account"
@@ -86,13 +86,9 @@
                 >Compte</a
               >
             </li>
-            <% if (locals.level >= 3) { %>
+            <% if (locals.user && locals.user.role === "admin") { %>
             <li>
-              <a
-                href="/Admin"
-                class="navbar-text <%= (locals.active && locals.active == 'Admin') ? 'active' : '' %>"
-                >ADMIN</a
-              >
+              <a href="/Admin"class="navbar-text <%= (locals.active && locals.active == 'Admin') ? 'active' : '' %>">ADMIN</a>
             </li>
             <% } %>
             <li>
