replacing most old req.user conditionnals, adding auth middlewares, changed old level attribute everywhere

--- a/views/Payment.ejs
+++ b/views/Payment.ejs
@@ -80,7 +80,7 @@
         </p>
       </form> 
       -->
-        <form action="/api/stripe/charge" method="POST" id="payment-form">
+        <form action="" method="POST" id="payment-form">
             <input type="text" id="email" placeholder="Email address" />
             <label for="card-element" class="card-label">
                 Credit or debit card
