now handling free delivery price for unique items

--- a/views/Cart.ejs
+++ b/views/Cart.ejs
@@ -109,8 +109,13 @@
       <% if (locals.totalPrice != 0 && locals.totalQty != 0) { %>
         <div class="col-md-6 offset-3 mt-4">
           <div class="payment-div p-3">
-            <h2>shipping(with tax):<%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</h2>
-            <span id="total-price-span">PRIX TOTAL(with tax): <b id="total-price"><%= locals.totalPrice %>€</b></span>
+            <% if (locals.deliveryPrice.response.shippingPriceIncludingTax) { %>
+              <span id="delivery-price-span">shipping(with tax): <b id="delivery-price"> <%= locals.deliveryPrice.response.shippingPriceIncludingTax %>€</b></span>
+            <% } else { %>
+              <span id="delivery-price-span">shipping(with tax): <b id="delivery-price">FREE</b></span>
+            <% } %>
+            <br />
+            <span id="total-price-span">PRIX TOTAL(with tax): <b id="total-price"><%= locals.totalPrice %>€</b></span><br />
             <span id="total-qty-span">QUANTITÉ TOTALE: <b id="total-qty"><%= locals.totalQty %></b></span>
             <a href="/Payment" class="linkbtn"><button class="btn-purchase" type="button" id="purchase">Continuer</button></a>
           </div>
