--- a/views/restricted/Order-manage.ejs
+++ b/views/restricted/Order-manage.ejs
@@ -10,7 +10,12 @@
           Identifiant de commande: <b><%= locals.order._id %></b>
           Prix total: <b><%= locals.order.price %>€</b>
           <% if (locals.order.status === "awaitingPayment") { %><h6>AWAITING PAYMENT</h6><% } %>
-          <h2>delivery price (with tax:) <%= locals.deliveryPriceFormatted %>€</h2>
+
+          <% if (locals.deliveryPriceFormatted !== "0.00") { %>
+            <h2>shipping(with tax): <%= locals.deliveryPriceFormatted %>€</h2>
+          <% } else { %>
+            <h2>shipping(with tax): FREE</h2>
+          <% } %>
           
           <form id="statusform" method="POST" action="/api/order/update">
             <div class="form-group">
