--- a/views/Account.ejs
+++ b/views/Account.ejs
@@ -1,5 +1,6 @@
 <% include partials/head %>
 
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 <div class="container-with-menu container">
   <div class="row row-height">
     <div class="menu col-3">
@@ -30,103 +31,34 @@
     <div id="login" class="tab col-9 row">
       <div class="container" id="container">
         <div class="form-slider-container sign-up-container">
-          <form
-            class="form-slider"
-            id="register"
-            method="POST"
-            action="/api/auth/register"
-          >
+          <form class="form-slider" id="register" onsubmit="submitRegister(event)" method="POST" action="/api/auth/register">
             <h1>S'inscrire</h1>
-            <input
-              placeholder="Nom"
-              placeholder="Jean75"
-              type="text"
-              name="name"
-              id="name"
-              onkeyup="Validate.String(this, 4, 30);"
-              value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>"
-              required
-            />
-            <span id="i_name" class="form-info"
-              >Username must contain between 4 and 30 characters</span
-            >
 
-            <input
-              placeholder="Email"
-              placeholder="jeandupont@gmail.com"
-              type="email"
-              name="email"
-              id="email"
-              onkeyup="Validate.Email(this);"
-              value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>"
-              required
-            />
+            <input placeholder="Jean75" type="text" name="name" id="name" onkeyup="Validate.String(this, 4, 30);" value="<% if (locals.formData) { %><%= locals.formData.name %><% } %>" required/>
+            <span id="i_name" class="form-info">Username must contain between 4 and 30 characters</span>
+
+            <input placeholder="jeandupont@gmail.com" type="email"name="email" id="email" onkeyup="Validate.Email(this);" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required/>
             <span id="i_email" class="form-info">E-mail has to be valid</span>
 
-            <input
-              placeholder="Mot de passe"
-              placeholder="********"
-              type="password"
-              name="password"
-              id="password"
-              onkeyup="Validate.Password(this);"
-              required
-            />
-            <span id="i_password" class="form-info"
-              >Password must contain between 8 and 256 characters and has to be
-              atleast alphanumeric</span
-            >
+            <input placeholder="Mot de passe" type="password" name="password" id="password" onkeyup="Validate.Password(this);" required/>
+            <span id="i_password" class="form-info">Password must contain between 8 and 256 characters and has to beatleast alphanumeric</span>
 
-            <input
-              placeholder="Mot de passe (confirmation)"
-              placeholder="********"
-              type="password"
-              name="password2"
-              id="password2"
-              onkeyup="Validate.Password2(this);"
-              required
-            />
-            <span id="i_password2" class="form-info"
-              >Password has to be the same as the one you just entered</span
-            >
+            <input placeholder="Mot de passe (confirmation)" type="password" name="password2" id="password2" onkeyup="Validate.Password2(this);" required/>
+            <span id="i_password2" class="form-info">Password has to be the same as the one you just entered</span>
 
-            <input
-              type="submit"
-              class="logbtn"
-              value="Inscription"
-              id="submit-register"
-            />
+            <div class="g-recaptcha" data-sitekey="6Ld8MaUZAAAAAOCR-6L6VcBgFJyBhFWWLnHPInJ9"></div>
+            <input type="submit" class="logbtn" value="Inscription" id="submit-register"/>
           </form>
         </div>
 
         <div class="form-slider-container sign-in-container">
-          <form
-            class="form-slider"
-            id="login-form"
-            method="POST"
-            action="/api/auth/login"
-          >
-            <h1 class="mb-3">Se connecter</h1>
-            <input
-              placeholder="Email"
-              type="email"
-              name="email"
-              value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>"
-              required
-            />
-            <input
-              placeholder="Mot de passe"
-              type="password"
-              name="password"
-              required
-            />
+          <form class="form-slider" id="login-form" method="POST" action="/api/auth/login">
 
-            <input
-              type="submit"
-              class="logbtn"
-              value="Connexion"
-              id="submit-login"
-            />
+            <h1 class="mb-3">Se connecter</h1>
+            <input placeholder="Email" type="email" name="email" value="<% if (locals.formData) { %><%= locals.formData.email %><% } %>" required/>
+            <input placeholder="Mot de passe" type="password" name="password" required/>
+
+            <input type="submit" class="logbtn" value="Connexion" id="submit-login"/>
           </form>
         </div>
 
@@ -204,7 +136,47 @@
   signInButton.addEventListener("click", () => {
     container.classList.remove("right-panel-active");
   });
+
+  function submitRegister(e) {
+    e.preventDefault();
+
+    const name = document.querySelector("#name").value;
+    const email = document.querySelector("#email").value;
+    const password = document.querySelector("#password").value;
+    const password2 = document.querySelector("#password2").value;
+    const captcha = document.querySelector("#g-recaptcha-response").value;
+
+    fetch('/api/auth/register', {
+      method: 'POST',
+      headers: {
+        'Accept': 'application/json, text/plain, */*',
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({name: name, email: email, password: password, password2: password2, captcha: captcha})
+    })
+    .then((res) => res.json())
+    .then((response) => {
+      let alertType = "success";
+      if (response.error === true)
+        alertType = "warning"
+      else {
+        document.querySelector("#name").value = "";
+        document.querySelector("#email").value = "";
+        document.querySelector("#password").value = "";
+        document.querySelector("#password2").value = "";
+        signInButton.click();
+      }
+
+      let alert = createAlertNode(response.message, alertType);
+      addAlert(alert, "#header");
+    })
+    .catch(err => {
+      let alert = createAlertNode(err.message, "danger");
+      addAlert(alert, "#header");
+    })
+  }
 </script>
+
 
 <script src="/scripts/frontValidation.js"></script>
 <% include partials/footer %>
