--- a/views/restricted/Shop-patch.ejs
+++ b/views/restricted/Shop-patch.ejs
@@ -34,10 +34,10 @@
                 </div>
                 <% if (locals.img) { %>
                     <% locals.img.forEach(function (item) { %>
-                        <img class="w-100 m-1" id="<%= item._id %>" src="http://localhost:8089/api/image/<%= item._id %>">
+                        <img class="w-100 m-1" id="<%= item._id %>" src="/api/image/<%= item._id %>">
                         <div id="actDiv<%= item._id %>" class="action-div" <% if (item.isMain === true) { %>style="display:none"<% } %>>
-                            <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="http://localhost:8089/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
-                            <a id="sel<%= item._id %>" onclick="setMain(event, this);" href="http://localhost:8089/api/image/select/Shop/<%= locals.shop._id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
+                            <a id="del<%= item._id %>" onclick="deleteImage(event, this);" href="/api/image/delete/<%= item._id %>"><i class="fas fa-trash-alt"></i></a>
+                            <a id="sel<%= item._id %>" onclick="setMain(event, this);" href="/api/image/select/Shop/<%= locals.shop._id %>/<%= item._id %>"><i class="fas fa-star"></i></a>
                         </div>
                     <% }) %>
                 <% } %>
