--- a/views/single/Galerie-single.ejs
+++ b/views/single/Galerie-single.ejs
@@ -20,7 +20,7 @@
             <% if (locals.img) { %>
               <% locals.img.forEach(function (item, index) { %>
                 <div class="carousel-item img-fluid <% if(index == 0) { %>active<% } %>">
-                  <a href="#expand"><img onclick="expand(this);" src="http://localhost:8089/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
+                  <a href="#expand"><img onclick="expand(this);" src="/api/image/<%= item._id %>" alt="<%= index %>slide"></a>
                   <div class="carousel-caption d-none d-md-block">
                   </div>
                 </div>
